# SMartBird

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  agents.md
assets/i18n/en-US/: vita_smb_player.json
assets/i18n/zh-Hant/: vita_smb_player.json
docker/: vita-builder-gxm.Dockerfile
docs/: refactor-plan.md
scripts/: build-builder-image.sh  build-vita-docker.sh  run-vita3k-installed.sh  update-vita3k-app.sh  verify-builder.sh
src/vita/: App.cpp  App.hpp  SmbConfig.hpp.in  main.cpp
src/vita/Browser/: BrowserActions.cpp  BrowserActions.hpp  BrowserState.cpp  BrowserState.hpp  CopyManager.cpp  CopyManager.hpp  Scanner.cpp  Scanner.hpp
src/vita/Config/: HiddenItems.cpp  HiddenItems.hpp  I18n.cpp  I18n.hpp  Settings.cpp  Settings.hpp
src/vita/Core/: Constants.hpp  State.cpp  State.hpp  Types.hpp
src/vita/Image/: ImageViewer.cpp  ImageViewer.hpp
src/vita/Network/: Runtime.cpp  Runtime.hpp
src/vita/Player/: PlayerHudLayout.cpp  PlayerHudLayout.hpp  PlayerMessages.cpp  PlayerMessages.hpp  PlayerOverlay.cpp  PlayerOverlay.hpp  SmbStream.cpp  SmbStream.hpp  VideoPlayer.cpp  VideoPlayer.hpp
src/vita/UI/: ImeInput.cpp  ImeInput.hpp  Input.cpp  Input.hpp  Screens.cpp  Screens.hpp  Theme.cpp  Theme.hpp  Widgets.cpp  Widgets.hpp
src/vita/Utils/: FileTypes.cpp  FileTypes.hpp  Json.cpp  Json.hpp  Math.cpp  Math.hpp  Text.cpp  Text.hpp
